--- a/inject/inject.scss
+++ b/inject/inject.scss
@@ -7,14 +7,7 @@
     grid-template-columns: repeat(5, 1fr) !important;
     height: 60px !important;
 
-    div:nth-child(2),
-    div:nth-child(3),
-    div:nth-child(4),
-    div:nth-child(5),
-    div:nth-child(6),
-    div:nth-child(9),
-    div:nth-child(10),
-    div:nth-child(12) {
+    > :not(div:has(input[value="492968"], input[value="492973"], input[value="492969"], input[value="492976"], input[value="492978"])) {
         display: none !important;
     }
 
@@ -123,6 +116,7 @@
     margin: 0 !important;
     background: cornflowerblue;
     overflow: hidden;
+    user-select: none;
 
     > div {
         display: flex !important;
@@ -131,19 +125,19 @@
         text-align: center;
         height: 60px;
         width: 100%;
-        user-select: none;
     }
 
-    div:nth-child(0) {
-        background: burlywood;
-    }
     div:nth-child(1) {
-        background: bisque;
+        background: #373737;
+        color: #f0f0f0;
     }
     div:nth-child(2) {
-        background: lightsteelblue;
+        background: bisque;
     }
     div:nth-child(3) {
+        background: lightsteelblue;
+    }
+    div:nth-child(4) {
         background: lightcoral;
     }
 }
